# bayan

./: .gitignore  CMakeLists.txt
.github/workflow/: buil.yaml
.github/workflows/: build.yaml
include/: bayan.h  compare.h  file.h  finder.h  hash.h
src/: bayan.cpp  compare.cpp  file.cpp  finder.cpp  hash.cpp  main.cpp
